src/test/deca/context/valid/ifthenelse.deca
// Description:
//    Opérateurs binaires d'inégalité
//
// Resultats:
//    ok
// 
// Historique:
//    cree le 01/01/2016

{
    int a = 5;
    int b = 2;
    if(a > 3.5) {
        println("5 est superieur a 3,5");
    }

    if(a > b) {
        println("5 est sup à 2");
    }
    else if(a == b) {
        println("5 est égale à 2");
    }
    else {
        println("5 est inf à 2");
    }
}
