src/test/deca/context/invalid/class/autoreference/string.deca
// Description:
//    Affectation de this à un string
//
// Resultats:
//    Incompatile type
// 
// Historique:
//    cree le 01/01/2016

class A {
	void m() {
		String a = this;
	}
}

{

}

